--- a/next-portfolio/package.json
+++ b/next-portfolio/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-lottie-player": "^1.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
