--- a/next-portfolio/.env
+++ b/next-portfolio/.env
@@ -1,2 +1,2 @@
-NOTION_TOKEN="9b145b7228444389bc954c8f36a668f3?v=7c71bbd3dbdc47e6888e2199e2bd3028"
-NOTION_DATABASE_ID="secret_aT9AJcW5nKt5FP4nw3ipBUXzoFQqhuOUP06cXpKy8CG"
+NEXT_PUBLIC_NOTION_TOKEN="secret_l5vcE7QJr7pO1xhvJSRi81fxTG6jWjfrPqvruTSU8qx"
+NEXT_PUBLIC_NOTION_DATABASE_ID="9b145b7228444389bc954c8f36a668f3"
